update:减少spring扫描范围，新增Ibatis Raycloud代码生成风格（公司内部使用）。

--- a/src/com/github/ansafari/plugin/codeGen/ui/wizard/crud/DataSourceConfigurableWizardStep.form
+++ b/src/com/github/ansafari/plugin/codeGen/ui/wizard/crud/DataSourceConfigurableWizardStep.form
@@ -53,7 +53,7 @@
               <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties>
-              <editable value="false"/>
+              <editable value="true"/>
               <text value="com.mysql.jdbc.Driver"/>
             </properties>
           </component>
